# onlinetest_db_api

./: Dockerfile  Makefile  pyproject.toml  requirements.txt  sample_env
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
sql_samples/: app.py  mapped_class.py  table.py
tests/: test_sql_connect.py
utils/: db_connect.py
